# context-agent

./: .dockerignore  .gitignore  .tool-versions  CLAUDE.md  Dockerfile  Makefile  README.md  deno.json  pyproject.toml
.claude/skills/ag-ui/: SKILL.md  how-we-use-ag-ui.md  python-ag-ui.md
.claude/skills/ag-ui/gradio/: SKILL.md
docs-site/: .dockerignore  Dockerfile  deno.json  main.ts  sandbox-state.ts  tailwind.config.js  utils.ts
docs-site/assets/: styles.css
docs-site/components/: DocLayout.tsx
docs-site/examples/economic-advisor/: fred-client.js  fred-openApi.yaml
docs-site/examples/economic-advisor/GDPUnemployment/: gdp-unemployment.md
docs-site/islands/: Playground.tsx
docs-site/routes/: _app.tsx  command-line.md  command-line.tsx  getting-started-text.md  getting-started.tsx  how-to-use.tsx  index.tsx  playground.tsx
docs-site/routes/api/: agent.ts  files.ts  init.ts  sandbox.ts  session.ts  update.ts
docs-site/utils/: signature.ts
examples/economic-advisor/: SystemPrompt.md
examples/economic-advisor/ConusumerPricesCostofLiving/: inflation-cola.md
examples/mcp_server/: get_tools.js  mcp_tools.md  run_tool.js
skills/ct-agent-ui-integration/: SKILL.md
src/context_agent/: __init__.py  acp_server.py  agent.py  cli.py  deno_manager.py  execute_js.py  serve.py  session.py  signature_middleware.py  ui.py
src/nl_agent/: __init__.py  agent.py  cli.py  execute_js.py  serve.py
utils/: ForTesting.ts  create_sandbox_snapshot.py  create_volume.ts  deno_sandbox.py  deno_sandbox.ts  kill_sandboxes.ts
workflow-testing/: .dockerignore  Dockerfile  workload.json
workflow-testing/exec-dir/: SystemPrompt.md
