[project]
name = "nl-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LukeS", email = "luke.shulman@datarobot.com" }
]
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.14.0",
    "pydantic-ai[ag-ui]>=1.91.0",
    "pydantic-graph>=1.91.0",
]

[project.scripts]
nl-agent = "nl_agent:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
