[project]
name = "context-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LukeS", email = "luke.shulman@datarobot.com" }
]
requires-python = ">=3.12"
dependencies = [
    "agent-client-protocol>=0.10.0",
    "aiohttp>=3.13.5",
    "click>=8.3.3",
    "deno-sandbox>=0.15.0",
    "gradio>=6.14.0",
    "pydantic-ai-slim[ag-ui]==1.91.0",
    "pydantic-ai-slim[openai]==1.91.0",
    "pydantic-graph>=1.91.0",
    "uvicorn>=0.46.0",
]

[project.scripts]
ct-agent = "context_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context_agent"]
artifacts = [
    "src/context_agent/bin/deno",
    "src/context_agent/bin/deno.exe",
]
